--- a/.gitignore
+++ b/.gitignore
@@ -138,5 +138,4 @@ dmypy.json
 scripts/gptindex_query.py
 /profile/
 /models/
-configs/project_secrets/secrets.yml
-/configs/project_secrets/
+**/secrets.yml
